chore: change app name

--- a/src/components/Logo.astro
+++ b/src/components/Logo.astro
@@ -4,7 +4,7 @@ import { Image } from "astro:assets";
 
 <div class="flex gap-1 items-center justify-center mb-12">
   <picture class="">
-    <Image width={126} height={126} src="/favicon.svg" alt="Crytor" />
+    <Image width={126} height={126} src="/favicon.svg" alt="Crytors" />
   </picture>
-  <h1 class="text-white text-6xl">Cryptor</h1>
+  <h1 class="text-white text-6xl">Cryptors</h1>
 </div>
