--- a/src/pages/decryptor/index.astro
+++ b/src/pages/decryptor/index.astro
@@ -4,7 +4,7 @@ import Layout from "@/Layouts/Layout.astro";
 ---
 
 <Layout
-  title="Cryptor | Descencriptación"
+  title="Cryptors | Descencriptación"
   description="Encrypta y descencripta datos con diferentes algoritmos"
 >
   <FieldsForCrypt
