chore: add horizontal padding

--- a/src/components/FieldsForCrypt.astro
+++ b/src/components/FieldsForCrypt.astro
@@ -10,7 +10,7 @@ const { pathname } = Astro.url;
 const { textTitle } = Astro.props;
 ---
 
-<section class="min-h-screen w-full flex items-center justify-center">
+<section class="min-h-screen w-full flex items-center justify-center p-4">
   <div class="max-w-md w-full mx-auto flex flex-col">
     <Logo />
     <div class="flex justify-center w-full mb-4">
