chore: add bg color light

--- a/src/Layouts/Layout.astro
+++ b/src/Layouts/Layout.astro
@@ -32,7 +32,7 @@ const {
 		preload={preload}
 		image={image}	/>
 	</head>
-	<body class="min-h-screen bg-white dark:bg-gray-900 dark:text-white">
+	<body class="min-h-screen dark:bg-gray-900 dark:text-white bg-gray-50">
     <slot />
 	</body>
 </html>
