chore: add bg color light

--- a/src/components/Logo.astro
+++ b/src/components/Logo.astro
@@ -6,5 +6,5 @@ import { Image } from "astro:assets";
   <picture class="">
     <Image width={126} height={126} src="/favicon.svg" alt="Crytors" />
   </picture>
-  <h1 class="text-white text-6xl">Cryptors</h1>
+  <h1 class="text-6xl">Cryptors</h1>
 </div>
